# Lab2

./: CMakeLists.txt  Config.txt  ConfigParser.cpp  ConfigParser.h  Converters.cpp  Converters.h  Factory.cpp  Factory.h  README.txt  SoundProcessor.cpp  SoundProcessor.h  WawParser.cpp  WawParser.h  WawWrite.cpp  WawWrite.h  main.cpp
